# fintech_platform

./: .gitignore  Cargo.toml  LICENSE  README.md
fintech_cli/: Cargo.toml
fintech_cli/src/: lib.rs  logic.rs  main.rs  trading_platform.rs
fintech_cli/src/core/: matching.rs
fintech_common/: Cargo.toml
fintech_common/src/: accounts.rs  cli.rs  core.rs  errors.rs  lib.rs  requests.rs  trading_platform.rs  tx.rs  validation.rs
fintech_common/src/cli/: cli_type.rs  constants.rs  helpers.rs
fintech_common/src/core/: matching.rs  types.rs
fintech_web/: Cargo.toml
fintech_web_client_cli/: Cargo.toml
fintech_web_client_cli/src/: constants.rs  lib.rs  logic.rs  main.rs
fintech_web_service/: Cargo.toml
fintech_web_service/src/: accounts.rs  errors.rs  handlers.rs  lib.rs  main.rs
src/: accounts.rs  constants.rs  core.rs  errors.rs  lib.rs  logic.rs  main.rs  trading_platform.rs  tx.rs
src/core/: matching.rs  types.rs
