[package]
name = "fintech_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fintech Platform (HFT) Non-Web CLI Application"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fintech_cli"
path = "src/main.rs"

[dependencies]
fintech_common = { path = "../fintech_common" }
