[package]
name = "fintech_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fintech Platform (HFT) Common Library"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
