[package]
name = "fintech_web"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Lazarević"]
description = "Fintech Platform (HFT) Web"
repository = "https://github.com/ivanbgd/fintech_platform"
license = "MIT"
keywords = ["finance", "fintech", "hft", "trading", "orderbook"]
categories = ["finance"]

[dependencies]
fintech_common = { path = "../fintech_common" }
