[package]
name = "fintech_web_client_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fintech Platform (HFT) Web CLI Client Application"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fintech_web_client_cli"
path = "src/main.rs"

[dependencies]
fintech_common = { path = "../fintech_common" }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = {  version = "1.36", features = ["full"] }
