[package]
name = "fintech_web_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fintech Platform (HFT) Web Service"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fintech_common = { path = "../fintech_common" }
